PR/47747: Thorsten Brehm: TCP-based RPC client calls no longer terminate when connections break. Return proper error code. XXX: pullup 6